bug: Div tag on link grid not closed causing images to shift to the right

--- a/css/style.css
+++ b/css/style.css
@@ -73,8 +73,8 @@ body {
   color: grey;
   display: grid;
   column-gap: 15px;
-  grid-template-columns: repeat(5, auto)
-
+  grid-template-columns: repeat(5, auto);
+ 
 }
 
 .imageport {
@@ -89,7 +89,11 @@ body {
         "smallimage"
 }
 
-.largeimage {
+
+.details {
+  grid-area: details;
+}
+/*.largeimage {
     grid-area: largeimage;
     display: grid;
     width: 100%;
@@ -98,8 +102,8 @@ body {
     grid-template-areas: 
       "hero"
 }
-
-.hero {
+*/
+/*.hero {
   grid-area: hero;
   width: auto;
   height: auto;
@@ -107,9 +111,9 @@ body {
   
   
   
-}
+}*/
 
-.smallimage {
+/*.smallimage {
     grid-area: smallimage;
     display: grid;
     grid-gap: 2px;
@@ -117,15 +121,15 @@ body {
     grid-template-rows: 1fr;
     grid-template-areas: 
       ". icona iconb iconc icond ."
-}
+}*/
 
-.icona, .iconb, .iconc, .icond {
+/*.icona, .iconb, .iconc, .icond {
   
-} 
+} */
 
 
 
-.icona {
+/*.icona {
   grid-area: icona;
 }
 .iconb {
@@ -137,7 +141,7 @@ body {
 .icond {
   grid-area: icond;
 }
-
+*/
 .footer {
   grid-area: footer;
 }
